# sm-3dcouple

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  setup.py
helper/: CMakeLists.txt  shape.cpp  shape.hpp
pythonbinding/: CMakeLists.txt  shapeMatchModelPB.cpp
shapeMatchModel/: CMakeLists.txt  shapeMatchModel.cpp  shapeMatchModel.hpp  shapeMatchModelIlp.cpp
shapeMatchModel/combinations/: combinations.cpp  combinations.hpp
shapeMatchModel/constraintsComputation/: CMakeLists.txt  constraints.cpp  constraints.hpp
shapeMatchModel/energyComputation/: CMakeLists.txt  deformationEnergy.cpp  deformationEnergy.hpp
